<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="movil.unicauca.peliculas.Tabbed.TabbedActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/nav_inicio" android:title="@string/movies" android:icon="@drawable/ic_pelicula"/>
    <item android:id="@+id/nav_calificarpeliculas" android:title="@string/calificarpeliculas" android:icon="@drawable/ic_calificar"/>
    <item android:id="@+id/nav_recordatorios" android:title="@string/remember" android:icon="@drawable/ic_recordar"/>
    <item android:title="@string/profile">
        <menu>
            <item android:id="@+id/nav_salir" android:title="@string/cerrarsesion" android:icon="@drawable/ic_salir"/>
        </menu>
    </item>
</menu>
