<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="movil.unicauca.peliculas.calificacion.Calificacion">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtseleccionpel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/movieseleccion"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/negro"
                />

            <Spinner
                android:id="@+id/moviesestrenos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtseleccionpel"
                app:layout_constraintHorizontal_bias="0.0"
                android:entries="@array/moviesestrenos"
                />

            <TextView
                android:id="@+id/peliculas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/negro"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="136dp"
                tools:text="@string/comment" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/sendcomment"
                android:inputType="text|textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/btnenviar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/peliculas" />

            <Button
                android:id="@+id/btnenviar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="376dp"
                tools:text="@string/send" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/moviesestrenos"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/peliculas"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                android:numStars="5"
                android:rating="2.0"
                android:stepSize="1.0"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
