<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="movil.unicauca.peliculas.adapters.ProximoEstrenoAdapter"/>

        <variable
            name="proximosestrenos"
            type="movil.unicauca.peliculas.models.ProximosEstrenos"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:onClick="@{(v)->handler.onClick(v)}"
        >


        <android.support.v7.widget.CardView
            android:layout_width="302dp"
            android:layout_height="264dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgpe"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/estrenosimg"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription=""
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@color/movieBg" />

                <ImageView
                    android:id="@+id/maskpe"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/estrenosimg"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/mask"
                    app:imgUrl="@{proximosestrenos.imagepe}"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{proximosestrenos.namepe}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                    app:layout_constraintBottom_toBottomOf="@+id/maskpe"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/namenextrelease"
                    app:fontTtf='@{"kunstler"}'
                    />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/maskpe"
                    app:srcCompat="@drawable/ic_today"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="@dimen/icon"
                    android:layout_height="@dimen/icon"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9"
                    app:srcCompat="@drawable/ic_time" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{proximosestrenos.dateofpremier}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintLeft_toRightOf="@+id/imageView9"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/datereleasepremier" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{proximosestrenos.durationpe}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/imageView10"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/duration" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>
