<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="estrenos"
            type="movil.unicauca.peliculas.models.Estrenos"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="movil.unicauca.peliculas.recordatorio.RecordatorioActivity">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/negro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/moviesstoremember" />

                <TextView
                    android:id="@+id/nombrepelicula"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@{estrenos.name}"
                    android:textColor="@color/negro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/btneliminar"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    tools:text="@string/namemovie" />

                <Button
                    android:id="@+id/btneliminar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="108dp"
                    android:layout_height="54dp"
                    android:layout_marginRight="21dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    tools:text="@string/delete" />

                <TextView
                    android:id="@+id/txtgenero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Géneros:"
                    android:textColor="@color/negro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="82dp" />

                <TextView
                    android:id="@+id/txtgenero2"
                    android:layout_width="131dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{estrenos.genero2}"
                    android:textColor="@color/negro"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/txtgenero1"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="107dp"
                    tools:text="genero2" />

                <TextView
                    android:id="@+id/txtgenero1"
                    android:layout_width="131dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:text="@{estrenos.genero1}"
                    android:textColor="@color/negro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:layout_editor_absoluteY="106dp"
                    tools:text="genero1"

                    />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Su Duración"
                    android:textColor="@color/negro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtgenero2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txtduracion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{estrenos.duration}"
                    android:textColor="@color/negro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/textView24"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtgenero2"
                    tools:text="duracion" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>

